--- a/src/assets/templates/otp-edit-student.hbs
+++ b/src/assets/templates/otp-edit-student.hbs
@@ -2,7 +2,7 @@
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Welcome to GunaKarir</title>
+    <title>OTP Edit Mahasiswa - GunaKarir</title>
     <link rel='preconnect' href='https://fonts.googleapis.com' />
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
   </head>
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Divider -->
-    <div style='width: 100%; height: 2px; background-color: #E81C24;'></div>
+    <div style='width: 100%; height: 2px; background-color: #3B82F6;'></div>
 
     <!-- Content -->
     <div
@@ -43,7 +43,7 @@
       >
         {{#each otp_code}}
           <div
-            style='width: 40px; height: 50px; border: 2px solid #E81C24; border-radius: 8px; text-align: center; line-height: 50px; font-size: 24px; font-weight: bold; color: #E81C24;'
+            style='width: 40px; height: 50px; border: 2px solid #3B82F6; border-radius: 8px; text-align: center; line-height: 50px; font-size: 24px; font-weight: bold; color: #3B82F6;'
           >
             {{this}}
           </div>
@@ -56,8 +56,8 @@
       </p>
 
       <a
-        href='http://localhost:3001'
-        style='display: inline-block; background-color: #E81C24; color: white; text-align: center; font-weight: 600; padding: 12px 16px; border-radius: 12px; text-decoration: none;'
+        href='http://frontend-gunakarir.vercel.app/'
+        style='display: inline-block; background-color: #3B82F6; color: white; text-align: center; font-weight: 600; padding: 12px 16px; border-radius: 12px; text-decoration: none;'
       >
         Kunjungi GunaKarir
       </a>
@@ -84,6 +84,5 @@
         >zidanindratama03@gmail.com</a>
       </div>
     </div>
-
   </body>
 </html>
