--- a/src/assets/templates/recruiter-review.hbs
+++ b/src/assets/templates/recruiter-review.hbs
@@ -2,7 +2,7 @@
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Welcome to GunaKarir</title>
+    <title>Status Pengajuan Recruiter - GunaKarir</title>
     <link rel='preconnect' href='https://fonts.googleapis.com' />
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
   </head>
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Divider -->
-    <div style='width: 100%; height: 2px; background-color: #E81C24;'></div>
+    <div style='width: 100%; height: 2px; background-color: #3B82F6;'></div>
 
     <!-- Content -->
     <div
@@ -66,8 +66,8 @@
       {{/eq}}
 
       <a
-        href='http://localhost:3001'
-        style='display: inline-block; background-color: #E81C24; color: white; text-align: center; font-weight: 600; padding: 12px 16px; border-radius: 12px; text-decoration: none;'
+        href='http://frontend-gunakarir.vercel.app/'
+        style='display: inline-block; background-color: #3B82F6; color: white; text-align: center; font-weight: 600; padding: 12px 16px; border-radius: 12px; text-decoration: none;'
       >
         Kunjungi GunaKarir
       </a>
@@ -94,6 +94,5 @@
         >zidanindratama03@gmail.com</a>
       </div>
     </div>
-
   </body>
 </html>
