--- a/src/assets/templates/welcome.hbs
+++ b/src/assets/templates/welcome.hbs
@@ -17,17 +17,20 @@
     </div>
 
     <!-- Divider -->
-    <div style='width: 100%; height: 2px; background-color: #E81C24;'></div>
+    <div style='width: 100%; height: 2px; background-color: #3B82F6;'></div>
 
     <!-- Content -->
     <div
       style='width: 100%; background-color: white; padding: 20px 40px; box-sizing: border-box;'
     >
       <h1 style='font-size: 20px; margin: 0 0 10px; font-weight: 400;'>Hai,
-        <span style='font-weight: 600;'>{{username}}</span></h1>
-      <h3 style='margin: 0 0 10px; font-weight: 400;'>Selamat datang di
+        <span style='font-weight: 600;'>{{username}}</span>
+      </h1>
+      <h3 style='margin: 0 0 10px; font-weight: 400;'>
+        Selamat datang di
         <span style='font-weight: 600;'>GunaKarir</span>
-        Portal Rekrutmen</h3>
+        Portal Rekrutmen
+      </h3>
       <p style='text-align: justify; margin: 0 0 20px;'>
         Terima kasih telah bergabung bersama
         <span style='font-weight: 600;'>GunaKarir</span>! Kami senang menyambut
@@ -36,8 +39,8 @@
         berarti, dan raih karier impian Anda bersama kami.
       </p>
       <a
-        href='http://localhost:3001'
-        style='display: inline-block; background-color: #E81C24; color: white; text-align: center; font-weight: 600; padding: 12px 16px; border-radius: 12px; text-decoration: none;'
+        href='http://frontend-gunakarir.vercel.app'
+        style='display: inline-block; background-color: #3B82F6; color: white; text-align: center; font-weight: 600; padding: 12px 16px; border-radius: 12px; text-decoration: none;'
       >
         Buka GunaKarir
       </a>
@@ -64,6 +67,5 @@
         >zidanindratama03@gmail.com</a>
       </div>
     </div>
-
   </body>
 </html>
